--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,75 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
- 
+    <div class="promo">
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header__logo">
+                    <img src="icons/main_icon.png" alt="header__logo">
+                </a>
+                <div class="header__official">
+                    Официальный представитель
+                    <span>
+                        Garmin, Polar, Suunto
+                    </span>
+                </div>
+                <div class="header__contact">
+                    <a href="+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <button class="button">
+                        заказать звонок
+                    </button>
+                </div>
+            </header>
+            
+            <div class="promo__wrapper">
+                <h1 class="promo__header">
+                    Подбор пульсометра
+                </h1>
+                <h2 class="promo__subheader">
+                    с учётом Вашего уровня подготовки
+                </h2>
+
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="icons/timer_time_stopwatch.png" alt="timer">
+                        Время подбора:
+                        10 минут
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/hand_cart.png" alt="hand_cart">
+                        Бесплатная
+                        доставка
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/messages.png" alt="messages">
+                        Ответим
+                        на все вопросы
+                    </div>
+                </div>
+                <button class="button button_main">заказать консультацию</button>
+                <div class="promo__link">
+                    или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>            
+            </div>
+        </div>
+    </div>
+
+    <div class="advantages">
+        <div class="container">
+            <div class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</div>
+
+            <div class="advantages__items">
+                <div class="advantages__item">
+                    <img src="icons/cup.png" alt="advantages__icon">
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/heart.png" alt="advantages__icon">
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/shoe.png" alt="advantages__icon">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
