--- a/src/index.html
+++ b/src/index.html
@@ -65,26 +65,41 @@
 
     <div class="advantages">
         <div class="container">
-            <div class="row">
-                <div class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</div>
-                <div class="advantages__items">
-                    <div class="advantages__item">
-                        <img src="icons/cup.png" alt="advantages__icon">
-                        <div class="advantages__subheader">Делимся опытом</div>
-                        <div class="advantages__text">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
-                    </div>
-                    <div class="advantages__item">
-                        <img src="icons/heart.png" alt="advantages__icon">
-                        <div class="advantages__subheader">Заботимся о здоровье</div>
-                        <div class="advantages__text">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
-                    </div>
-                    <div class="advantages__item">
-                        <img src="icons/shoe.png" alt="advantages__icon">
-                        <div class="advantages__subheader">Учим бегать</div>
-                        <div class="advantages__text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
-                    </div>
-                </div>    
+            <div class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</div>
+            <div class="advantages__items">
+                <div class="advantages__item">
+                    <img src="icons/cup.png" alt="advantages__icon">
+                    <div class="advantages__subheader">Делимся опытом</div>
+                    <div class="advantages__text">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/heart.png" alt="advantages__icon">
+                    <div class="advantages__subheader">Заботимся о здоровье</div>
+                    <div class="advantages__text">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/shoe.png" alt="advantages__icon">
+                    <div class="advantages__subheader">Учим бегать</div>
+                    <div class="advantages__text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
+                </div>
             </div>
+            <!-- <div class="advantages__items">
+                <div class="advantages__item">
+                    <img src="icons/cup.png" alt="advantages__icon">
+                    <div class="advantages__subheader">Делимся опытом</div>
+                    <div class="advantages__text">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/heart.png" alt="advantages__icon">
+                    <div class="advantages__subheader">Заботимся о здоровье</div>
+                    <div class="advantages__text">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/shoe.png" alt="advantages__icon">
+                    <div class="advantages__subheader">Учим бегать</div>
+                    <div class="advantages__text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
+                </div>
+            </div> -->
         </div>
     </div>
 </body>
