added new container "consultation"

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
 
     <div class="advantages">
         <div class="container">
-            <div class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</div>
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__items">
                 <div class="advantages__item">
                     <img src="icons/cup.png" alt="advantages__icon">
@@ -83,6 +83,20 @@
                     <div class="advantages__text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">Получите бесплатную консультацию<br>по подбору пульсометра</h2>
+            <div class="consultation__descr">Просто заполните форму заявки<br>и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed_form" action="#">
+                <input name="client_name" required placeholder="Ваше имя" type="text">
+                <input name="phone_nb" required placeholder="Ваш телефон" type="number">
+                <input name="email"bv required  placeholder="Ваш E-mail" type="email">
+                <!-- <input type="submit" value="заказать консультацию"> можно использовать такой вариат -->
+                <button class="button button_submit">заказать консультацию</button>
+            </form>
         </div>
     </div>
 </body>
