--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
                 <input name="client_name" required placeholder="Ваше имя" type="text">
                 <input name="phone_nb" required placeholder="Ваш телефон" type="number">
                 <input name="email"bv required  placeholder="Ваш E-mail" type="email">
-                <!-- <input type="submit" value="заказать консультацию"> можно использовать такой вариат -->
+                <!-- <input type="submit" value="заказать консультацию"> можно использовать такой вариант -->
                 <button class="button button_submit">заказать консультацию</button>
             </form>
         </div>
