--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <!-- slick -->
     <!-- <link rel="stylesheet" href="css/slick.css"/> -->
     <link rel="stylesheet" href="css/tiny-slider.css">
     <link rel="stylesheet" href="css/style.min.css">
@@ -116,7 +117,7 @@
             <button type="button" class="next"><img src="icons/right.png"></button>
         </div>
     </section>
-
+    <!-- slick -->
     <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script> -->
