--- a/src/index.html
+++ b/src/index.html
@@ -452,6 +452,41 @@
             
         </div>
     </section>
+
+    <section class="feedbacks">
+        <div class="container">
+            <h2 class="feedbacks__title">отзывы клиентов</h2>
+            <div class="feedbacks__items">
+                <div class="feedbacks__item">
+                    <img src="img/feedback_photo_1.png" alt="client_photo#1" class="feedbacks__client_photo">
+                    <div class="client">
+                        <div class="client__name">Ирина Иванченко </div>
+                        <div class="client__subdescr">2 полумарафона</div>
+                        <div class="client__feedback">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности. Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же. <br><br>Новые цели - новый гаджет! <br><br>Спасибо, RunSmart!
+                    </div>
+                    </div>
+                </div>
+                <div class="feedbacks__item">
+                    <img src="img/feedback_photo_2.png" alt="client_photo#2" class="feedbacks__client_photo">
+                    <div class="client">
+                        <div class="client__name">Иван Сёмочкин</div>
+                        <div class="client__subdescr">1 полумарафона</div>
+                        <div class="client__feedback">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.<br> Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.<br><br>С ними подготовился к своему первому полумарафону! Спасибо!!!
+                        </div>  
+                    </div>
+                </div>
+                <div class="feedbacks__item">
+                    <img src="img/feedback_photo_3.png" alt="client_photo#3" class="feedbacks__client_photo">
+                    <div class="client">
+                        <div class="client__name">Юлия Дашкина</div>
+                        <div class="client__subdescr">2 полумарафона</div>
+                        <div class="client__feedback">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.<br><br>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!<br><br>Спасибо!!!
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- slick -->
     <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
