--- a/src/index.html
+++ b/src/index.html
@@ -91,10 +91,10 @@
         <div class="container">
             <h2 class="title title_left">Получите бесплатную консультацию<br>по подбору пульсометра</h2>
             <div class="consultation__descr">Просто заполните форму заявки<br>и мы перезвоним вам в течении 10 минут</div>
-            <form class="feed_form" action="#">
-                <input name="client_name" required placeholder="Ваше имя" type="text">
-                <input name="phone_nb" required placeholder="Ваш телефон" type="number">
-                <input name="email"bv required  placeholder="Ваш E-mail" type="email">
+            <form id="consultation_form" class="feed_form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number" pattern="+[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{4}" maxlength="11">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
                 <!-- <input type="submit" value="заказать консультацию"> можно использовать такой вариант -->
                 <button class="button button_submit">заказать консультацию</button>
             </form>
@@ -506,9 +506,9 @@
             <div class="modal__subtitle">Просто заполните форму заявки</div>
             <div class="modal__description">и мы перезвоним вам в течении 10 минут</div>
             <form class="feed_form feed_form_mt25" action="#">
-                <input name="client_name" required placeholder="Ваше имя" type="text">
-                <input name="phone_nb" required placeholder="Ваш телефон" type="number">
-                <input name="email"bv required  placeholder="Ваш E-mail" type="email">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required  placeholder="Ваш E-mail" type="email">
                 <!-- <input type="submit" value="заказать консультацию"> можно использовать такой вариант -->
                 <button class="button button_submit">заказать консультацию</button>
             </form>
@@ -519,9 +519,9 @@
             <div class="modal__subtitle">Ваш заказ:</div>
             <div class="modal__description">Пульсометр Polar FT1</div>
             <form class="feed_form feed_form_mt25" action="#">
-                <input name="client_name" required placeholder="Ваше имя" type="text">
-                <input name="phone_nb" required placeholder="Ваш телефон" type="number">
-                <input name="email"bv required  placeholder="Ваш E-mail" type="email">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
                 <!-- <input type="submit" value="заказать консультацию"> можно использовать такой вариант -->
                 <button class="button button_submit">купить</button>
             </form>
@@ -542,7 +542,7 @@
     <script src="js/tabs.js"></script>
     <!-- jQuery tabs -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/modal.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
