added mask for phone forms

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
             <div class="consultation__descr">Просто заполните форму заявки<br>и мы перезвоним вам в течении 10 минут</div>
             <form id="consultation_form" class="feed_form" action="#">
                 <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="number" pattern="+[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{4}" maxlength="11">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required placeholder="Ваш E-mail" type="email">
                 <!-- <input type="submit" value="заказать консультацию"> можно использовать такой вариант -->
                 <button class="button button_submit">заказать консультацию</button>
@@ -507,7 +507,7 @@
             <div class="modal__description">и мы перезвоним вам в течении 10 минут</div>
             <form class="feed_form feed_form_mt25" action="#">
                 <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required  placeholder="Ваш E-mail" type="email">
                 <!-- <input type="submit" value="заказать консультацию"> можно использовать такой вариант -->
                 <button class="button button_submit">заказать консультацию</button>
@@ -520,7 +520,7 @@
             <div class="modal__description">Пульсометр Polar FT1</div>
             <form class="feed_form feed_form_mt25" action="#">
                 <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required placeholder="Ваш E-mail" type="email">
                 <!-- <input type="submit" value="заказать консультацию"> можно использовать такой вариант -->
                 <button class="button button_submit">купить</button>
@@ -543,6 +543,7 @@
     <!-- jQuery tabs -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
