--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <!-- slick -->
     <!-- <link rel="stylesheet" href="css/slick.css"/> -->
     <link rel="stylesheet" href="css/tiny-slider.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -73,7 +74,6 @@
                         <img src="icons/star.svg" alt="" class="star1">
                         <img src="icons/star.svg" alt="" class="star2">
                         <img src="icons/star.svg" alt="" class="star3">
-                       
                     </div>
                     <img src="icons/cup.png" alt="advantages__icon" class="advantages__icon">
                     <div class="advantages__subheader">Делимся опытом</div>
@@ -461,7 +461,7 @@
         <div class="container">
             <h2 class="title">отзывы клиентов</h2>
             <div class="feedbacks__items">
-                <div class="feedbacks__item">
+                <div class="feedbacks__item slideInUp wow" data-wow-duration="2s" data-wow-delay="1s">
                     <img src="img/feedback_photo_1.png" alt="client_photo#1" class="feedbacks__client_photo">
                     <div class="client client__content_big">
                         <div class="client__name">Ирина Иванченко </div>
@@ -470,7 +470,7 @@
                     </div>
                     </div>
                 </div>
-                <div class="feedbacks__item">
+                <div class="feedbacks__item slideInUp wow" data-wow-duration="2s" data-wow-delay="1s">
                     <img src="img/feedback_photo_2.png" alt="client_photo#2" class="feedbacks__client_photo">
                     <div class="client client__content_big">
                         <div class="client__name">Иван Сёмочкин</div>
@@ -479,7 +479,7 @@
                         </div>  
                     </div>
                 </div>
-                <div class="feedbacks__item">
+                <div class="feedbacks__item slideInUp wow" data-wow-duration="2s" data-wow-delay="1s">
                     <img src="img/feedback_photo_3.png" alt="client_photo#3" class="feedbacks__client_photo">
                     <div class="client client__content_big">
                         <div class="client__name">Юлия Дашкина</div>
@@ -553,6 +553,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
