--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
         </div>
     </section>
 
-    <section class="carousel">
+    <div class="carousel">
         <div class="container">
             <div class="carousel__inner">
                 <div>
@@ -117,10 +117,10 @@
                 <div><img src="img/slide_3.jpg" alt="slide"></div>
                 
             </div>
-            <button type="button" class="prev"><img src="icons/left.png"></button>
-            <button type="button" class="next"><img src="icons/right.png"></button>
+            <button type="button" class="prev"><img alt="button_left" src="icons/left.png"></button>
+            <button type="button" class="next"><img alt="button_right" src="icons/right.png"></button>
         </div>
-    </section>
+    </div>
 
     <section class="catalog">
         <div class="container">
@@ -494,14 +494,14 @@
 
     <footer class="footer">
         <!-- чтобы применять стили карту можно засунуть в блок -->
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.43048007664!2d37.646996!3d55.768395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2sMyasnitskiy%20Proyezd%2C%204%2F3%2C%20Moskva%2C%20107078!5e0!3m2!1sen!2sru!4v1667144509880!5m2!1sen!2sru" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.43048007664!2d37.646996!3d55.768395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2sMyasnitskiy%20Proyezd%2C%204%2F3%2C%20Moskva%2C%20107078!5e0!3m2!1sen!2sru!4v1667144509880!5m2!1sen!2sru" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="footer__info">
             <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
             <a href="tel:84999228974" class="footer__phone">8 (499) 922-89-74</a>
             <div class="footer__social">
-                <a href="#" class="footer__social-item" alt="facebook"><img src="icons/facebook_icon.svg" alt=""></a>
-                <a href="#" class="footer__social-item" alt="instagram"><img src="icons/inst_icon.svg" alt=""></a>
-                <a href="#" class="footer__social-item" alt="pinterest"><img src="icons/pinterest_icon.svg" alt=""></a>
+                <a href="#" class="footer__social-item"><img src="icons/facebook_icon.svg" alt=""></a>
+                <a href="#" class="footer__social-item"><img src="icons/inst_icon.svg" alt=""></a>
+                <a href="#" class="footer__social-item"><img src="icons/pinterest_icon.svg" alt=""></a>
             </div>
         </div>
     </footer>
@@ -543,11 +543,11 @@
         <img src="icons/page_up.svg" alt="page_up">
     </a>
     <!-- slick -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script> -->
     <!-- tiny-slider -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/tabs.js"></script>
     <!-- jQuery tabs -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
