added meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pulse</title>
+    <title>>Garmin, Polar, Suunto</title>
+    <meta name="title" content="Garmin, Polar, Suunto">
+    <meta name="description" content="Подбор пульсометров для бега и жизни">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:title" content="Garmin, Polar, Suunto">
+    <meta property="og:description" content="Подбор пульсометров для бега и жизни">
+    <meta property="og:image" content="img/img_metatag.png">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:title" content="Garmin, Polar, Suunto">
+    <meta property="twitter:description" content="Подбор пульсометров для бега и жизни">
+    <meta property="twitter:image" content="img/img_metatag.png">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
     <!-- slick -->
