--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>>Garmin, Polar, Suunto</title>
+    <title>Garmin, Polar, Suunto</title>
     <meta name="title" content="Garmin, Polar, Suunto">
     <meta name="description" content="Подбор пульсометров для бега и жизни">
     <!-- Open Graph / Facebook -->
